--- a/src/components/styles/resumeStyles.css
+++ b/src/components/styles/resumeStyles.css
@@ -1,186 +1,165 @@
- /* Resume */
- /* *{
+/* Resume */
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Josefin Sans', sans-serif;
   } */
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Josefin Sans", sans-serif;
+  box-sizing: border-box;
+}
+.body {
+  background: grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+.backBtn {
+  margin-bottom: 80%;
+}
+.cover {
+  position: relative;
+  width: 100%;
+  max-width: 1000px;
+  min-height: 1000px;
+  margin: 50px;
+  background: #fff;
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  box-shadow: 0 35px 55px rgba(0, 0, 0, 0.1);
+}
+.cover .left_side {
+  position: relative;
+  background: #191919;
+  padding: 40px;
+}
+.profileText {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+.profileText .imgBx {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.profileText .imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.profileText h2 {
+  color: #fff;
+  font-size: 1.5em;
+  margin-top: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 600;
+  line-height: 1.4em;
+}
+.profileText h2 span {
+  font-size: 0.8em;
+  font-weight: 300;
+}
+.contactInfo {
+  padding-top: 40px;
+}
 
- .body{
-    background: grey;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-  }
-  
-  .backBtn{
-    margin-bottom: 80%;
-  }
-
- .cover{
-	position: relative;
-	width: 100%;
-	max-width: 1000px;
-	min-height: 1000px;
-	margin: 50px;
-	background: #fff;
-	display: grid;
-	grid-template-columns: 1fr 1.5fr;
-	box-shadow: 0 35px 55px rgba(0,0,0,0.1);
-  }
-  
-  .cover .left_side{
-	position: relative;
-	background: #191919;
-	padding: 40px;
-  }
-  
-  .profileText{
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding-bottom: 20px;
-	border-bottom: 1px solid rgba(255,255,255,0.2);
-  }
-  
-  .profileText .imgBx{
-	position: relative;
-	width: 200px;
-	height: 200px;
-	border-radius: 50%;
-	overflow: hidden;
-  }
-  
-  .profileText .imgBx img{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-  }
-  
-  .profileText h2{
-	color: #fff;
-	font-size: 1.5em;
-	margin-top: 20px;
-	text-transform: uppercase;
-	text-align: center;
-	font-weight: 600;
-	line-height: 1.4em;
-  }
-  
-  .profileText h2 span{
-	font-size: 0.8em;
-	font-weight: 300;
-  }
-  
-  .contactInfo{
-	padding-top: 40px;
-  }
-  
-  /* .title{
+/* .title{
 	color: #fff;
 	text-transform: uppercase;
 	font-weight: 600;
 	letter-spacing: 1px;
 	margin-bottom: 20px;
   } */
-  
-  .contactInfo ul{
-	position: relative;
-  }
-  
-  .contactInfo ul li {
-	list-style: none;
-	margin: 10px 0;
-	cursor: pointer;
-  }
-  
-  .contactInfo ul li .icon{
-	display: inline-block;
-	width: 30px;
-	font-size: 18px;
-	color: #f9004d;
-  }
-  
-  .contactInfo ul li span {
-	color:#fff;
-	font-weight: 300;
-  }
-  
-  .text a {
-	text-decoration: none;
-	color: #fff;
-  }
-  
-  .text a:hover{
-	color:  #f9004d;;
-  }
-  
-  .contactInfo.education li{
-	margin-bottom: 15px;
-  }
-  
-  .contactInfo.education h5{
-	color: #f9004d;
-	font-weight: 500;
-  }
-  
-  .contactInfo.education h4:nth-child(2){
-	color: #fff;
-	font-weight: 500;
-  }
-  
-  .contactInfo.education h4{
-	color: #fff;
-	font-weight: 300;
-  }
-  
-  .contactInfo.language .percent{
-	position: relative;
-	width: 100%;
-	height: 6px;
-	background: #000;
-	display: block;
-	margin-top: 5px;
-  }
-  
-  .contactInfo.language .percent div{
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100%;
-	background: #f9004d;
-  }
-  
-  .cover .right_side{
-	position: relative;
-	background: #fff;
-	padding: 40px;
-  }
-  
-  .aboutInfo{
-	margin-bottom: 0;
-  }
-  
-  .aboutInfo:last-child{
-	margin-bottom: 0;
-  }
-  
-  .title2{
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	margin-top: 50px;
-  }
-  
-  p{
-	color: #000;
-	font-weight: 500;
-  }
-  
-  .year1{
-	color: #f9004d;
-  }
+
+.contactInfo ul {
+  position: relative;
+}
+.contactInfo ul li {
+  list-style: none;
+  margin: 10px 0;
+  cursor: pointer;
+}
+.contactInfo ul li .icon {
+  display: inline-block;
+  width: 30px;
+  font-size: 18px;
+  color: #f9004d;
+}
+.contactInfo ul li span {
+  color: #fff;
+  font-weight: 300;
+}
+.text a {
+  text-decoration: none;
+  color: #fff;
+}
+.text a:hover {
+  color: #f9004d;
+}
+.contactInfo.education li {
+  margin-bottom: 15px;
+}
+.contactInfo.education h5 {
+  color: #f9004d;
+  font-weight: 500;
+}
+.contactInfo.education h4:nth-child(2) {
+  color: #fff;
+  font-weight: 500;
+}
+.contactInfo.education h4 {
+  color: #fff;
+  font-weight: 300;
+}
+.contactInfo.language .percent {
+  position: relative;
+  width: 100%;
+  height: 6px;
+  background: #000;
+  display: block;
+  margin-top: 5px;
+}
+.contactInfo.language .percent div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #f9004d;
+}
+.cover .right_side {
+  position: relative;
+  background: #fff;
+  padding: 40px;
+}
+.aboutInfo {
+  margin-bottom: 0;
+}
+.aboutInfo:last-child {
+  margin-bottom: 0;
+}
+.title2 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-top: 50px;
+}
+p {
+  color: #000;
+  font-weight: 500;
+}
+.year1 {
+  color: #f9004d;
+}
