--- a/src/components/styles/contactStyles.css
+++ b/src/components/styles/contactStyles.css
@@ -1,48 +1,65 @@
 /* ContactPage */
 .bodyCont {
-    margin: 0;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff;
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
   /* font-family: "Bree Serif", serif; */
   width: 100%;
 }
 
 .contact-container {
-	  /* text-align: center;  */
-	  display: flex;
-	  justify-content: center;
-	  flex-direction: row;
-	  border: 2px solid black;
-	  margin-top: -15%;
-	  color: #000;
-	}
-	
-	.row {
-	  padding: 20px;
-	  margin-top: 15%;
-	}
-	
-	input {
-	  border:none;
-	  border-bottom: 1px solid darkgray;
-	  padding: 20px;
-	}
-	
-	textarea{
-	  border:none;
-	  border-bottom: 1px solid darkgray;
-	  padding: 20px;
-	}
+  /* text-align: center;  */
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  border: 2px solid black;
+  margin-top: -15%;
+  color: #000;
+}
 
-	.col {
-		/* border: 1px solid darkgray; */
-		padding: 50px;
-	  }
-	  
-	  .fill {
-		color: #000;
-	  }
+.row {
+  padding: 20px;
+  margin-top: 15%;
+}
+
+input {
+  border: none;
+  border-bottom: 1px solid darkgray;
+  padding: 20px;
+}
+
+textarea {
+  border: none;
+  border-bottom: 1px solid darkgray;
+  padding: 20px;
+}
+
+.col {
+  /* border: 1px solid darkgray; */
+  padding: 50px;
+}
+
+.fill {
+  color: #000;
+}
+
+.butt{
+	background-color:#f9004d;
+	color: white;
+	text-decoration: none;
+	border: 2px solid transparent;
+	font-weight: bold;
+	padding: 13px 30px;
+	border-radius: 30px;
+	transition: .4s; 
+}
+.butt:hover {
+  background-color: transparent;
+  border: 2px solid #f9004d;
+  color: #f9004d;
+  cursor: pointer;
+}
