--- a/src/components/styles/projectStyles.css
+++ b/src/components/styles/projectStyles.css
@@ -38,7 +38,7 @@ body{
     border-radius: 20px;
     text-align: center;
     width: 250px; 
-    /* was 250px */
+   /* height: 100%; */
     transition: transform .3s;
     border: 1px solid black;
   }
@@ -98,8 +98,20 @@ body{
 .ProdBtn:hover{
 	background-color: transparent;
 	border: 2px solid #f9004d;
+  color: #f9004d;
 	cursor: pointer;
 }
+
+/* .proMsg {
+  text-align: center;
+  padding: 10px;
+  border: 2px solid #f9004d;
+margin: 10px;
+}
+
+.proHeader{
+ height: 100%;
+} */
 
   .ank {
     text-decoration: none;
